# marvel_e2e_pytest

./: .gitignore  README.md  pyproject.toml
marvel_e2e_pytest/: __main__.py
marvel_e2e_pytest/tests/: test_marvel_battle_simulator.py  test_marvel_delete.py  test_marvel_get.py  test_marvel_post.py  test_marvel_update.py
marvel_e2e_pytest/tools/: clean_db.py  docker_tools.py  helpers.py
